Dark Mode Calendar entries text is hard to read Fixes #12

--- a/public/main.css
+++ b/public/main.css
@@ -424,7 +424,6 @@ main {
 }
 .event-date-time, .event-location {
     font-size: 0.9em;
-    color: #555;
 }
 
 .elementToProof {
